éviter les doublons dans communityEmail